--- a/index.html
+++ b/index.html
@@ -1,258 +1,137 @@
 <!doctype html>
-
 <html lang="pt">
-
 <head>
-
   <meta charset="utf-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>Quinta dos Avós Lourenço · Alojamento rural na Sertã</title>
-
   <meta name="description" content="Alojamento rural na Sertã, refúgio tranquilo desde 1853.">
 
-
-
   <!-- ✅ Política de Segurança -->
-
   <meta http-equiv="Content-Security-Policy"
-
         content="
-
           default-src 'self';
-
           script-src 'self';
-
           style-src  'self' 'unsafe-inline';
-
           img-src    'self' data:;
-
           font-src   'self' data:;
-
           connect-src 'self';
-
           base-uri   'self';
-
           form-action 'self';
-
           upgrade-insecure-requests;
-
         ">
-
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-
-
   <link rel="stylesheet" href="css/style.css">
-
 </head>
-
-
-
 <body>
-
   <!-- Cabeçalho -->
-
   <header class="topbar">
-
     <div class="brand">
-
       <a href="index.html">
-
         <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-
       </a>
-
     </div>
-
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-
     <nav class="menu" aria-label="Navegação principal">
-
       <a href="index.html" class="active">Início</a>
-
       <a href="sobre.html">Sobre</a>
-
       <a href="galeria.html">Galeria</a>
-
       <a href="contactos.html">Contactos</a>
-
     </nav>
-
   </header>
 
-
-
   <!-- Hero -->
-
   <section class="hero">
-
     <div class="container">
-
       <span class="badge">Alojamento Rural</span>
-
       <h1>Quinta dos Avós Lourenço</h1>
-
       <p>Refúgio tranquilo na Sertã, rodeado de natureza e tradição desde 1853.</p>
-
       <p>
-
         <a class="btn primary" href="contactos.html">Contactar</a>
-
         <a class="btn" href="sobre.html">Saber mais</a>
-
       </p>
-
     </div>
-
   </section>
-
-
 
   <!-- Destaques -->
-
   <section class="section">
-
     <div class="container">
-
       <div class="grid">
-
         <div class="card">
-
           <h3>Conforto e Tradição</h3>
-
           <p>Cozinha equipada, sala de jantar, quartos com luz natural e ambiente rústico cuidadosamente restaurado.</p>
-
         </div>
-
         <div class="card">
-
           <h3>Natureza em 3 hectares</h3>
-
           <p>Oliveiras, equipamentos agrícolas tradicionais e animais que compõem um cenário rural autêntico.</p>
-
         </div>
-
         <div class="card">
-
           <h3>Sustentabilidade</h3>
-
           <p>Compromisso com práticas responsáveis e respeito pela comunidade e recursos naturais.</p>
-
         </div>
-
       </div>
-
     </div>
-
   </section>
-
-
 
   <!-- Testemunhos -->
-
   <section class="section" id="testemunhos">
-
     <div class="container">
-
       <h2 class="titulo-testemunhos">Testemunhos</h2>
 
-
-
       <!-- Airbnb -->
-
       <p style="text-align:center; margin-top:-6px;">
-
         <a href="https://www.airbnb.pt/rooms/875560493639889462"
-
            target="_blank" rel="noopener noreferrer"
-
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
-
           ⭐ 4,96/5 · +50 avaliações · Airbnb
-
         </a>
-
       </p>
-
-
 
       <!-- Booking -->
-
       <p style="text-align:center; margin-top:4px;">
-
         <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html"
-
            target="_blank" rel="noopener noreferrer"
-
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
-
           ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
-
         </a>
-
       </p>
 
-
-
       <div class="testemunhos-slider">
-
         <div class="dots"></div>
-
       </div>
-
     </div>
-
   </section>
 
-
-
   <!-- Rodapé -->
-
   <footer class="footer">
-
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
-
        <a href="politica-privacidade.html">Política de Privacidade</a>
-
     </p>
-
   </footer>
 
-
-
   <!-- WhatsApp flutuante -->
-
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-
      class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp">
-
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
-
   </a>
-  
-  <div id="cookie-consent" role="dialog" aria-live="polite" style="
-  position: fixed; inset-inline: 0; bottom: 0; 
-  background: #111; color: #fff; padding: 16px; 
-  display: none; z-index: 9999; box-shadow: 0 -4px 20px rgba(0,0,0,.25);
-">
-  <p style="margin:0 0 8px 0;">
-    Usamos cookies apenas para garantir o bom funcionamento do site.
-    <a href="/quintadosavoslourenco_site/politica-privacidade.html" style="color:#9fd3ff; text-decoration:underline;">Saiba mais</a>
-  </p>
-  <button id="cookie-accept" type="button" style="
-    background:#22c55e; border:0; padding:8px 14px; border-radius:8px; cursor:pointer;
-  ">Aceitar</button>
-</div>
 
-<!-- Scripts -->
+  <!-- Banner de cookies (1 só instância) -->
+  <div id="cookie-consent" role="dialog" aria-live="polite" aria-hidden="true" style="
+    position: fixed; inset-inline: 0; bottom: 0;
+    background: #111; color: #fff; padding: 16px;
+    display: none; z-index: 9999; box-shadow: 0 -4px 20px rgba(0,0,0,.25);
+  ">
+    <p style="margin:0 0 8px 0;">
+      Usamos cookies apenas para garantir o bom funcionamento do site.
+      <a href="politica-privacidade.html" style="color:#9fd3ff; text-decoration:underline;">Saiba mais</a>
+    </p>
+    <button id="cookie-accept" type="button" style="
+      background:#22c55e; border:0; padding:8px 14px; border-radius:8px; cursor:pointer;
+    ">Aceitar</button>
+  </div>
 
-<script defer src="js/cookies.js"></script>
-
-
-<script defer src="js/app.js"></script>
+  <!-- Scripts -->
+  <script defer src="js/cookies.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
-
-
 </html>
