--- a/index.html
+++ b/index.html
@@ -115,19 +115,15 @@
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- Banner de cookies (1 só instância) -->
-  <div id="cookie-consent" role="dialog" aria-live="polite" aria-hidden="true" style="
-    position: fixed; inset-inline: 0; bottom: 0;
-    background: #111; color: #fff; padding: 16px;
-    display: none; z-index: 9999; box-shadow: 0 -4px 20px rgba(0,0,0,.25);
-  ">
-    <p style="margin:0 0 8px 0;">
-      Usamos cookies apenas para garantir o bom funcionamento do site.
-      <a href="politica-privacidade.html" style="color:#9fd3ff; text-decoration:underline;">Saiba mais</a>
-    </p>
-    <button id="cookie-accept" type="button" style="
-      background:#22c55e; border:0; padding:8px 14px; border-radius:8px; cursor:pointer;
-    ">Aceitar</button>
+  <!-- Banner de cookies (fundo branco + botão à direita) -->
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="politica-privacidade.html">Saiba mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
   </div>
 
   <!-- Scripts -->
