--- a/sobre.html
+++ b/sobre.html
@@ -7,18 +7,17 @@
   <meta name="description" content="Conheça a história e o espírito da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
 
   <!-- ✅ Segurança -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self';
-          style-src  'self' 'unsafe-inline';
-          img-src    'self' data:;
-          font-src   'self' data:;
-          connect-src 'self';
-          base-uri   'self';
-          form-action 'self';
-          upgrade-insecure-requests;
-        ">
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src  'self' 'unsafe-inline';
+    img-src    'self' data:;
+    font-src   'self' data:;
+    connect-src 'self';
+    base-uri   'self';
+    form-action 'self';
+    upgrade-insecure-requests;
+  ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
   <link rel="stylesheet" href="css/style.css">
@@ -32,10 +31,7 @@
         <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
-
-    <!-- Botão hambúrguer -->
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-
     <nav class="menu" aria-label="Navegação principal">
       <a href="index.html">Início</a>
       <a href="sobre.html" class="active">Sobre</a>
@@ -83,17 +79,26 @@
     </p>
   </footer>
 
-  <!-- ✅ Banner de cookies (oculto por defeito) -->
-<div id="cookie-banner" class="cookie-banner" role="dialog"
-     aria-label="Aviso de cookies" hidden>
-  <p>Usamos cookies apenas para garantir o bom funcionamento do site.
-     <a href="politica-privacidade.html">Saiba mais</a></p>
-  <button id="accept-cookies" type="button">Aceitar</button>
-</div>
+  <!-- WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
+     class="whatsapp-float" target="_blank" rel="noopener noreferrer"
+     aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+  </a>
 
-<!-- Scripts -->
-<script defer src="js/cookies.js"></script>
-<script defer src="js/app.js"></script>
+  <!-- Banner de cookies -->
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="politica-privacidade.html">Saiba mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
+  </div>
 
+  <!-- Scripts -->
+  <script defer src="js/cookies.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
 </html>
