--- a/galeria.html
+++ b/galeria.html
@@ -4,26 +4,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galeria · Quinta dos Avós Lourenço</title>
-  <meta name="description" content="Alguns momentos e detalhes da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
+  <meta name="description" content="Fotografias da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
 
   <!-- ✅ Segurança -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self';
-          style-src  'self' 'unsafe-inline';
-          img-src    'self' data:;
-          font-src   'self' data:;
-          connect-src 'self';
-          base-uri   'self';
-          form-action 'self';
-          upgrade-insecure-requests;
-        ">
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src  'self' 'unsafe-inline';
+    img-src    'self' data:;
+    font-src   'self' data:;
+    connect-src 'self';
+    base-uri   'self';
+    form-action 'self';
+    upgrade-insecure-requests;
+  ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <!-- Cabeçalho -->
   <header class="topbar">
@@ -32,10 +30,7 @@
         <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
-
-    <!-- Botão hambúrguer (fora da nav) -->
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-
     <nav class="menu" aria-label="Navegação principal">
       <a href="index.html">Início</a>
       <a href="sobre.html">Sobre</a>
@@ -47,47 +42,51 @@
   <!-- Conteúdo -->
   <main class="section">
     <div class="container">
-      <h1>Galeria</h1>
-      <p style="text-align:center;">Alguns momentos e detalhes da Quinta dos Avós Lourenço:</p>
-
+      <h1 style="text-align:center;">Galeria</h1>
       <div class="gallery">
-        <img src="images/foto1.jpg" alt="Vista da quinta">
-        <img src="images/foto2.jpg" alt="Quarto principal">
-        <img src="images/foto3.jpg" alt="Área exterior">
-        <img src="images/foto4.jpg" alt="Detalhes rústicos">
-        <img src="images/foto5.jpg" alt="Piscina e oliveiras">
-        <img src="images/foto6.jpg" alt="Entrada principal">
-        <img src="images/foto7.jpg" alt="Animais da quinta">
-        <img src="images/foto8.jpg" alt="Pôr do sol na quinta">
-        <img src="images/foto9.jpg" alt="Vista panorâmica">
+        <!-- Substitui os ficheiros abaixo pelos teus. Se não existirem, a página continua sem erros. -->
+        <img src="images/galeria1.jpg" alt="Quinta dos Avós Lourenço — exterior 1" loading="lazy">
+        <img src="images/galeria2.jpg" alt="Quinta dos Avós Lourenço — exterior 2" loading="lazy">
+        <img src="images/galeria3.jpg" alt="Sala de estar" loading="lazy">
+        <img src="images/galeria4.jpg" alt="Quarto" loading="lazy">
+        <img src="images/galeria5.jpg" alt="Cozinha" loading="lazy">
+        <img src="images/galeria6.jpg" alt="Vista do jardim" loading="lazy">
+        <img src="images/galeria7.jpg" alt="Detalhes rústicos" loading="lazy">
+        <img src="images/galeria8.jpg" alt="Animais da quinta" loading="lazy">
+        <img src="images/galeria9.jpg" alt="Pátio exterior" loading="lazy">
+        <img src="images/galeria10.jpg" alt="Caminho entre oliveiras" loading="lazy">
+        <img src="images/galeria11.jpg" alt="Área de refeições" loading="lazy">
+        <img src="images/galeria12.jpg" alt="Nascer do sol na propriedade" loading="lazy">
       </div>
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
        <a href="politica-privacidade.html">Política de Privacidade</a>
     </p>
   </footer>
 
-  <!-- Botão flutuante WhatsApp (corrigido) -->
-  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp">
+  <!-- WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
+     class="whatsapp-float" target="_blank" rel="noopener noreferrer"
+     aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
- <!-- ✅ Banner de cookies (oculto por defeito) -->
-<div id="cookie-banner" class="cookie-banner" role="dialog"
-     aria-label="Aviso de cookies" hidden>
-  <p>Usamos cookies apenas para garantir o bom funcionamento do site.
-     <a href="politica-privacidade.html">Saiba mais</a></p>
-  <button id="accept-cookies" type="button">Aceitar</button>
-</div>
+  <!-- Banner de cookies -->
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="politica-privacidade.html">Saiba mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
+  </div>
 
-<!-- Scripts -->
-<script defer src="js/cookies.js"></script>
-<script defer src="js/app.js"></script>
-
+  <!-- Scripts -->
+  <script defer src="js/cookies.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
 </html>
