Update index.html add insta face

--- a/index.html
+++ b/index.html
@@ -97,6 +97,23 @@
         <div class="dots"></div>
       </div>
     </div>
+    <!-- Redes sociais -->
+<div class="social-row" aria-label="Siga-nos nas redes sociais">
+  <a class="social-link" href="https://www.facebook.com/QuintaDosAvosLourenco" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+    <!-- SVG Facebook -->
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M22 12.06C22 6.49 17.52 2 12 2S2 6.49 2 12.06c0 5.01 3.66 9.17 8.44 9.94v-7.03H7.9v-2.91h2.54V9.41c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.24.2 2.24.2v2.47h-1.26c-1.24 0-1.62.77-1.62 1.56v1.87h2.77l-.44 2.91h-2.33V22c4.78-.77 8.44-4.93 8.44-9.94z"/>
+    </svg>
+  </a>
+
+  <a class="social-link" href="https://https://www.instagram.com/quintadosavoslourenco/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+    <!-- SVG Instagram -->
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5zm5.75-3a1.25 1.25 0 1 1-1.25 1.25A1.25 1.25 0 0 1 17.75 6.5z"/>
+    </svg>
+  </a>
+</div>
+
   </section>
 
   <!-- Rodapé -->
