--- a/index.html
+++ b/index.html
@@ -104,7 +104,19 @@
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
        <a href="politica-privacidade.html">Política de Privacidade</a>
     </p>
-  </footer>
+  <!-- O teu conteúdo atual do rodapé -->
+  
+  <div style="margin-top: 20px; text-align: center;">
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+      <img 
+        src="https://www.livroreclamacoes.pt/images/logo_livro_reclamacoes.svg" 
+        alt="Livro de Reclamações Online" 
+        style="height: 60px; width: auto;"
+      />
+    </a>
+  </div>
+</footer>
+
 
   <!-- WhatsApp flutuante -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
