Update index.html livro reclamações 1

--- a/index.html
+++ b/index.html
@@ -100,21 +100,14 @@
   </section>
 
   <!-- Rodapé -->
-  <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
-       <a href="politica-privacidade.html">Política de Privacidade</a>
-    </p>
-  <!-- O teu conteúdo atual do rodapé -->
-  
-  <div style="margin-top: 20px; text-align: center;">
+<footer>
+  <p>
+    © 2025 Quinta dos Avós Lourenço | 
+    <a href="/politica-de-privacidade.html">Política de Privacidade</a> | 
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-      <img 
-        src="https://www.livroreclamacoes.pt/images/logo_livro_reclamacoes.svg" 
-        alt="Livro de Reclamações Online" 
-        style="height: 60px; width: auto;"
-      />
+      Livro de Reclamações
     </a>
-  </div>
+  </p>
 </footer>
 
 
