--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
   </section>
 
   <!-- Rodapé -->
-<footer>
+<div class="footer">
   <p>
-    © 2025 Quinta dos Avós Lourenço | 
-    <a href="/politica-de-privacidade.html">Política de Privacidade</a> | 
+    © 2025 Quinta dos Avós Lourenço |
+    <a href="/politica-de-privacidade.html">Política de Privacidade</a> |
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
     </a>
   </p>
-</footer>
+</div>
 
 
   <!-- WhatsApp flutuante -->
