--- a/index.html
+++ b/index.html
@@ -100,15 +100,11 @@
   </section>
 
   <!-- Rodapé -->
-<div class="footer">
-  <p>
-    © 2025 Quinta dos Avós Lourenço |
-    <a href="/politica-de-privacidade.html">Política de Privacidade</a> |
-    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-      Livro de Reclamações
-    </a>
-  </p>
-</div>
+<footer class="footer">
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+       <a href="politica-privacidade.html">Política de Privacidade</a>
+    </p>
+  </footer>
 
 
   <!-- WhatsApp flutuante -->
