--- a/galeria.html
+++ b/galeria.html
@@ -64,6 +64,8 @@
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
        <a href="politica-privacidade.html">Política de Privacidade</a>
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+      Livro de Reclamações
     </p>
   </footer>
 
