--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -112,6 +112,8 @@
 
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · <a href="politica-privacidade.html">Política de Privacidade</a></p>
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+      Livro de Reclamações
   </footer>
 
   <!-- (Opcional) Banner de cookies – se ainda não o adicionaste nesta página -->
