--- a/contactos.html
+++ b/contactos.html
@@ -84,12 +84,14 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-       <a href="politica-privacidade.html">Política de Privacidade</a>
-      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+  <p>
+    © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+    <a href="politica-privacidade.html">Política de Privacidade</a> ·
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
-    </p>
-  </footer>
+    </a>
+  </p>
+</footer>
 
   <!-- ✅ Banner de cookies (branco, botão à direita, 1 só instância) -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
