--- a/galeria.html
+++ b/galeria.html
@@ -20,22 +20,22 @@
   ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      <a href="/index.html">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html" class="active">Galeria</a>
-      <a href="contactos.html">Contactos</a>
+      <a href="/index.html">Início</a>
+      <a href="/sobre.html">Sobre</a>
+      <a href="/galeria.html" class="active">Galeria</a>
+      <a href="/contactos.html">Contactos</a>
     </nav>
   </header>
 
@@ -44,38 +44,39 @@
     <div class="container">
       <h1 style="text-align:center;">Galeria</h1>
       <div class="gallery">
-        <!-- Substitui os ficheiros abaixo pelos teus. Se não existirem, a página continua sem erros. -->
-        <img src="images/galeria1.jpg" alt="Quinta dos Avós Lourenço — exterior 1" loading="lazy">
-        <img src="images/galeria2.jpg" alt="Quinta dos Avós Lourenço — exterior 2" loading="lazy">
-        <img src="images/galeria3.jpg" alt="Sala de estar" loading="lazy">
-        <img src="images/galeria4.jpg" alt="Quarto" loading="lazy">
-        <img src="images/galeria5.jpg" alt="Cozinha" loading="lazy">
-        <img src="images/galeria6.jpg" alt="Vista do jardim" loading="lazy">
-        <img src="images/galeria7.jpg" alt="Detalhes rústicos" loading="lazy">
-        <img src="images/galeria8.jpg" alt="Animais da quinta" loading="lazy">
-        <img src="images/galeria9.jpg" alt="Pátio exterior" loading="lazy">
-        <img src="images/galeria10.jpg" alt="Caminho entre oliveiras" loading="lazy">
-        <img src="images/galeria11.jpg" alt="Área de refeições" loading="lazy">
-        <img src="images/galeria12.jpg" alt="Nascer do sol na propriedade" loading="lazy">
+        <!-- ✅ Caminhos corrigidos (barra inicial garante que funcionam em todas as páginas) -->
+        <img src="/images/galeria1.jpg" alt="Quinta dos Avós Lourenço — exterior 1" loading="lazy">
+        <img src="/images/galeria2.jpg" alt="Quinta dos Avós Lourenço — exterior 2" loading="lazy">
+        <img src="/images/galeria3.jpg" alt="Sala de estar" loading="lazy">
+        <img src="/images/galeria4.jpg" alt="Quarto" loading="lazy">
+        <img src="/images/galeria5.jpg" alt="Cozinha" loading="lazy">
+        <img src="/images/galeria6.jpg" alt="Vista do jardim" loading="lazy">
+        <img src="/images/galeria7.jpg" alt="Detalhes rústicos" loading="lazy">
+        <img src="/images/galeria8.jpg" alt="Animais da quinta" loading="lazy">
+        <img src="/images/galeria9.jpg" alt="Pátio exterior" loading="lazy">
+        <img src="/images/galeria10.jpg" alt="Caminho entre oliveiras" loading="lazy">
+        <img src="/images/galeria11.jpg" alt="Área de refeições" loading="lazy">
+        <img src="/images/galeria12.jpg" alt="Nascer do sol na propriedade" loading="lazy">
       </div>
     </div>
   </main>
 
+  <!-- Rodapé -->
   <footer class="footer">
-  <p>
-    © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="politica-privacidade.html">Política de Privacidade</a> ·
-    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-      Livro de Reclamações
-    </a>
-  </p>
-</footer>
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+      <a href="/politica-privacidade.html">Política de Privacidade</a> ·
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+        Livro de Reclamações
+      </a>
+    </p>
+  </footer>
   
   <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer"
      aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
-    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+    <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
   <!-- Banner de cookies -->
@@ -83,14 +84,15 @@
     <div class="cookie-inner">
       <p class="cookie-text">
         Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="politica-privacidade.html">Saiba mais</a>
+        <a href="/politica-privacidade.html">Saiba mais</a>
       </p>
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
   </div>
 
   <!-- Scripts -->
-  <script defer src="js/cookies.js"></script>
-  <script defer src="js/app.js"></script>
+  <script defer src="/js/cookies.js"></script>
+  <script defer src="/js/app.js"></script>
 </body>
 </html>
+
