Update galeria.html tentativa 10

--- a/galeria.html
+++ b/galeria.html
@@ -54,7 +54,7 @@
         <img src="/images/galeria7.jpg" alt="Detalhes rústicos" loading="lazy">
         <img src="/images/galeria8.jpg" alt="Animais da quinta" loading="lazy">
         <img src="/images/galeria9.jpg" alt="Pátio exterior" loading="lazy">
-        <img src="/images/galeria10.jpg" alt="Caminho entre oliveiras" loading="lazy">
+       <img src="/images/galeria10a.jpg" alt="Caminho entre oliveiras" loading="lazy">
         <img src="/images/galeria11.jpg" alt="Área de refeições" loading="lazy">
         <img src="/images/galeria12.jpg" alt="Nascer do sol na propriedade" loading="lazy">
       </div>
