--- a/galeria/index.html
+++ b/galeria/index.html
@@ -1,1 +1,98 @@
+<!doctype html>
+<html lang="pt">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Galeria · Quinta dos Avós Lourenço</title>
+  <meta name="description" content="Fotografias da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
+
+  <!-- ✅ Segurança -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src  'self' 'unsafe-inline';
+    img-src    'self' data:;
+    font-src   'self' data:;
+    connect-src 'self';
+    base-uri   'self';
+    form-action 'self';
+    upgrade-insecure-requests;
+  ">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <!-- Cabeçalho -->
+  <header class="topbar">
+    <div class="brand">
+      <a href="/index.html">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
+    </div>
+    <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+    <nav class="menu" aria-label="Navegação principal">
+      <a href="/index.html">Início</a>
+      <a href="/sobre.html">Sobre</a>
+      <a href="/galeria.html" class="active">Galeria</a>
+      <a href="/contactos.html">Contactos</a>
+    </nav>
+  </header>
+
+  <!-- Conteúdo -->
+  <main class="section">
+    <div class="container">
+      <h1 style="text-align:center;">Galeria</h1>
+      <div class="gallery">
+        <!-- ✅ Caminhos corrigidos (barra inicial garante que funcionam em todas as páginas) -->
+        <img src="/images/galeria1.jpg" alt="Quinta dos Avós Lourenço — exterior 1" loading="lazy">
+        <img src="/images/galeria2.jpg" alt="Quinta dos Avós Lourenço — exterior 2" loading="lazy">
+        <img src="/images/galeria3.jpg" alt="Sala de estar" loading="lazy">
+        <img src="/images/galeria4.jpg" alt="Quarto" loading="lazy">
+        <img src="/images/galeria5.jpg" alt="Cozinha" loading="lazy">
+        <img src="/images/galeria6.jpg" alt="Vista do jardim" loading="lazy">
+        <img src="/images/galeria7.jpg" alt="Detalhes rústicos" loading="lazy">
+        <img src="/images/galeria8.jpg" alt="Animais da quinta" loading="lazy">
+        <img src="/images/galeria9.jpg" alt="Pátio exterior" loading="lazy">
+       <img src="/images/galeria10a.jpg" alt="Caminho entre oliveiras" loading="lazy">
+        <img src="/images/galeria11.jpg" alt="Área de refeições" loading="lazy">
+        <img src="/images/galeria12.jpg" alt="Nascer do sol na propriedade" loading="lazy">
+      </div>
+    </div>
+  </main>
+
+  <!-- Rodapé -->
+  <footer class="footer">
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+      <a href="/politica-privacidade.html">Política de Privacidade</a> ·
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+        Livro de Reclamações
+      </a>
+    </p>
+  </footer>
+  
+  <!-- WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
+     class="whatsapp-float" target="_blank" rel="noopener noreferrer"
+     aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+    <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
+  </a>
+
+  <!-- Banner de cookies -->
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="/politica-privacidade.html">Saiba mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script defer src="/js/cookies.js"></script>
+  <script defer src="/js/app.js"></script>
+</body>
+</html>
 
