--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <footer class="footer">
   <p>
     © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="politica-privacidade.html">Política de Privacidade</a> ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
     </a>
