Update index.html tenativa html1

--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -31,11 +31,11 @@
       </a>
     </div>
     <nav class="menu" aria-label="Navegação principal">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html">Contactos</a>
-    </nav>
+  <a href="/">Início</a>
+  <a href="/sobre/">Sobre</a>
+  <a href="/galeria/">Galeria</a>
+  <a href="/contactos/">Contactos</a>
+</nav>
   </header>
 
   <main class="container section">
@@ -113,7 +113,7 @@
   <footer class="footer">
   <p>
     © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="politica-privacidade.html">Política de Privacidade</a> ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
     </a>
