--- a/sobre.html
+++ b/sobre.html
@@ -33,11 +33,11 @@
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
-      <a href="index.html">Início</a>
-      <a href="sobre.html" class="active">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html">Contactos</a>
-    </nav>
+  <a href="/">Início</a>
+  <a href="/sobre/">Sobre</a>
+  <a href="/galeria/">Galeria</a>
+  <a href="/contactos/">Contactos</a>
+</nav>
   </header>
 
   <!-- Conteúdo -->
@@ -73,10 +73,10 @@
     </div>
   </main>
 
- <footer class="footer">
+<footer class="footer">
   <p>
     © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="politica-privacidade.html">Política de Privacidade</a> ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
     </a>
