--- a/galeria.html
+++ b/galeria.html
@@ -31,12 +31,12 @@
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-    <nav class="menu" aria-label="Navegação principal">
-      <a href="/index.html">Início</a>
-      <a href="/sobre.html">Sobre</a>
-      <a href="/galeria.html" class="active">Galeria</a>
-      <a href="/contactos.html">Contactos</a>
-    </nav>
+  <nav class="menu" aria-label="Navegação principal">
+  <a href="/">Início</a>
+  <a href="/sobre/">Sobre</a>
+  <a href="/galeria/">Galeria</a>
+  <a href="/contactos/">Contactos</a>
+</nav>
   </header>
 
   <!-- Conteúdo -->
@@ -62,15 +62,15 @@
   </main>
 
   <!-- Rodapé -->
-  <footer class="footer">
-    <p>
-      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-      <a href="/politica-privacidade.html">Política de Privacidade</a> ·
-      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-        Livro de Reclamações
-      </a>
-    </p>
-  </footer>
+ <footer class="footer">
+  <p>
+    © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+      Livro de Reclamações
+    </a>
+  </p>
+</footer>
   
   <!-- WhatsApp -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
