--- a/contactos.html
+++ b/contactos.html
@@ -32,11 +32,11 @@
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html" class="active">Contactos</a>
-    </nav>
+  <a href="/">Início</a>
+  <a href="/sobre/">Sobre</a>
+  <a href="/galeria/">Galeria</a>
+  <a href="/contactos/">Contactos</a>
+</nav>
   </header>
 
   <!-- Conteúdo -->
@@ -86,13 +86,12 @@
   <footer class="footer">
   <p>
     © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-    <a href="politica-privacidade.html">Política de Privacidade</a> ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
     <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
       Livro de Reclamações
     </a>
   </p>
 </footer>
-
   <!-- ✅ Banner de cookies (branco, botão à direita, 1 só instância) -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
