--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-    <nav class="menu" aria-label="Navegação principal">
+  <nav class="menu" aria-label="Navegação principal">
   <a href="/">Início</a>
   <a href="/sobre/">Sobre</a>
   <a href="/galeria/">Galeria</a>
@@ -40,17 +40,17 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <span class="badge">Alojamento Rural</span>
-      <h1>Quinta dos Avós Lourenço</h1>
-      <p>Refúgio tranquilo na Sertã, rodeado de natureza e tradição desde 1853.</p>
-      <p>
-        <a class="btn primary" href="contactos.html">Contactar</a>
-        <a class="btn" href="sobre.html">Saber mais</a>
-      </p>
-    </div>
-  </section>
+<section class="hero">
+  <div class="container">
+    <span class="badge">Alojamento Rural</span>
+    <h1>Quinta dos Avós Lourenço</h1>
+    <p>Refúgio tranquilo na Sertã, rodeado de natureza e tradição desde 1853.</p>
+    <p>
+      <a class="btn primary" href="/contactos/">Contactar</a>
+      <a class="btn" href="/sobre/">Saber mais</a>
+    </p>
+  </div>
+</section>
 
   <!-- Destaques -->
   <section class="section">
@@ -104,9 +104,7 @@
   <p>
     © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
     <a href="/politica-privacidade/">Política de Privacidade</a> ·
-    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-      Livro de Reclamações
-    </a>
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
   </p>
 </footer>
 
